2001-08-06  Alex Graveley  <alex@ximian.com>

	* src/soup-core/soup-private.h: Define VERSION to "Win/0.4.2" for
	Windows clients.

2001-08-06  Alex Graveley  <alex@ximian.com>

	* src/soup-core/soup-transfer.c (soup_transfer_read_cb): Remove
	warning used for testing.
	(soup_transfer_write_cb): Ditto.

2001-08-06  Alex Graveley  <alex@ximian.com>

	* src/soup-core/soup-transfer.c (soup_transfer_read_cb): Read
	speedup to read all available data before processing and returning
	to the mainloop.

	* src/soup-core/soup-message.h: Add defines for standard DAV methods.

2001-07-31  Alex Graveley  <alex@ximian.com>

	* src/soup-core/soup-queue.c (soup_get_request_header): Remove
	special case for GET and HEAD when adding content-length header.

2001-07-30  Alex Graveley  <alex@ximian.com>

	* configure.in: Bump version to 0.4.2.

2001-07-30  Alex Graveley  <alex@ximian.com>

	* src/soup-core/soup-queue.c (soup_queue_read_headers_cb):
	Content-length should be avoided for HEAD requests.

2001-07-30  Alex Graveley  <alex@ximian.com>

	* src/soup-core/soup-misc.c (soup_load_config_internal): Fix bug
	where only the first valid config token is loaded from the config file.

2001-07-30  Alex Graveley  <alex@ximian.com>

	* src/soup-core/soup-socket.c (soup_address_new_cb): Fix dangling
	pointer error where a resolved SoupAddress is passed to the callback,
	and then realloc'd.

	* src/soup-core/soup-headers.c (soup_headers_parse_response):
	Don't require gchar const **status_phrase.

2001-07-29  Alex Graveley  <alex@ximian.com>

	* src/soup-core/soup-apache.c (soup_apache_message_create): strdup
	response_phrase.

	* src/soup-core/soup-httpd.c (soup_httpd_read_done_cb): Ditto.
	
	* src/soup-core/soup-message.c (soup_message_free): Free
	response_phrase.

	* src/soup-core/soup-context.c (soup_try_existing_connections):
	Revert accidental commit.

	* src/soup-core/soup-queue.c (soup_get_request_header): Only
	inhibit Content-Length for GET and HEAD if request.length is 0;